[project]
name = "rag-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "build==1.3.0",
    "cachetools==6.2.3",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "chromadb==1.3.7",
    "click==8.3.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.18",
    "decorator==5.2.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "durationpy==0.10",
    "executing==2.2.1",
    "filelock==3.20.0",
    "flatbuffers==25.9.23",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "google-auth==2.43.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.2.3",
    "humanfriendly==10.0",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jiter==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "kubernetes==33.1.0",
    "langchain>=1.1.3",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.0",
    "langchain-openai==1.1.3",
    "langchain-text-splitters==1.0.0",
    "langsmith==0.4.59",
    "markdown-it-py==4.0.0",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "numpy==2.3.5",
    "oauthlib==3.3.1",
    "onnxruntime==1.23.2",
    "openai==2.11.0",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "orjson==3.11.5",
    "overrides==7.7.0",
    "packaging==25.0",
    "parso==0.8.5",
    "platformdirs==4.5.1",
    "posthog==5.4.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.2",
    "psutil==7.1.3",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pypdf==6.4.1",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.45",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "tornado==6.5.3",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.20.0",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.2",
    "uuid-utils==0.12.0",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]
